[project]
name = "etw_pytorch_utils"
version = "1.1.2"
description = ""
authors = [
    {name="Erik Wijmans", email="etw@gatech.edu>"}
]
requires-python = ">=3.5"
dependencies = [
    "numpy>=1.18.5",
    "scipy>=1.4.1",
    "statistics>=1.0.3.5",
    "torch>=1.5.1",
    "tqdm>=4.64.1",
    "visdom>=0.2.4",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
